# kmeansParallel

./: CMakeLists.txt  README.md  generador.py  plot_points.py  puntos_2_bloques.txt  puntos_5_bloques.txt
source/: openmp_example.cpp  pthread_example.cpp
